--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,10 +8,10 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: www.blueberrywindow.online
-    port: 8080
+    server: 162.159.142.209
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,89 +19,39 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
+        host: us3.visaapp.top
   - &id002
-    name: 🇧🇭_BH_巴林->🇳🇱_NL_荷兰
-    type: vmess
-    server: 151.248.104.91
-    port: 80
-    cipher: auto
-    uuid: 75916879-adcf-45b3-98d8-54a2412470b5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: sahar55.serveirc.com
-  - &id003
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 3.70.75.70
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id004
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: www.coldstone.club
-    port: 8080
+    server: 2.namesilo123.top
+    port: 2082
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /?ed=2048
       headers:
-        host: www.coldstone.club
-  - &id005
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
-    type: vmess
-    server: www.crispyrainbow.biz
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.biz
-  - &id006
-    name: 🇱🇾_LY_利比亚->🇹🇷_TR_土耳其_1
-    type: vmess
-    server: 197.215.140.234
-    port: 80
-    cipher: auto
-    uuid: f0028153-2a2d-45fe-b44e-a1a6dbd0c65e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: saman8888.servecounterstrike.com
-  - &id007
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
+        host: freezhang.sanfen002.top
+  - &id003
     name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.166.190
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.online
+  - &id004
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: www.crispyrainbow.online
     port: 8080
@@ -115,69 +65,25 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id009
-    name: 🇺🇿_UZ_乌兹别克斯坦->🇹🇷_TR_土耳其
+  - &id005
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
-    server: 37.110.209.228
+    server: 162.159.200.5
     port: 80
     cipher: auto
-    uuid: f0028153-2a2d-45fe-b44e-a1a6dbd0c65e
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@forwardv2ray
+      path: /
       headers:
-        host: saman8888.servecounterstrike.com
-  - &id010
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10848
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10837
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: be1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 38df59ec-30e2-45e9-86c7-5a58667e6994
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id013
+        host: ca3.889611.com
+  - &id006
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 23.137.248.47
-    port: 8080
-    cipher: auto
-    uuid: c65dd227-86bb-5854-bdf7-54c9c16acdb2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
-    type: vmess
-    server: www.darkroom.lol
+    server: www.blueberrywindow.online
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -188,58 +94,23 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.darkroom.lol
-  - &id015
+        host: www.blueberrywindow.online
+  - &id007
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: cdn.yifenjichang.top
-    port: 2086
-    cipher: auto
-    uuid: 900ceafc-30b8-4581-a305-31854f563e4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 900ceafc-30b8-4581-a305-31854f563e4f-vm
-      headers:
-        host: gc-sql-blast-law.trycloudflare.com
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10850
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 5.104.108.109
-    port: 443
-    udp: true
-    password: 877347fb-3c6e-4d44-b2c8-5c63e97c0521
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇮🇱_IL_以色列->🇳🇱_NL_荷兰
-    type: vmess
-    server: 5.188.94.5
+    server: 104.20.231.30
     port: 80
     cipher: auto
-    uuid: 75916879-adcf-45b3-98d8-54a2412470b5
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@forwardv2ray
+      path: /
       headers:
-        host: sahar55.serveirc.com
-  - &id019
+        host: my1.tooters.ir
+  - &id008
     name: 🇺🇸_US_美国_7
     type: vmess
     server: 104.21.23.176
@@ -254,31 +125,25 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id020
-    name: 🇩🇪_DE_德国_3
+  - &id009
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 167.235.65.233
-    port: 34310
+    server: 104.18.15.151
+    port: 80
     cipher: auto
-    uuid: b067a70b-5579-4b61-bc34-4c3266909d19
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10838
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_8
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us3.889611.com
+  - &id010
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
     type: vmess
-    server: 172.67.166.190
+    server: www.crispyrainbow.biz
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -289,57 +154,365 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.online
-  - &id023
+        host: www.crispyrainbow.biz
+  - &id011
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: 104.21.20.16
-    port: 443
+    server: 8.namesilo123.top
+    port: 2082
     cipher: auto
-    uuid: 802c1068-ee2b-4c87-b49d-e7f3043e75d2
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: se2-vmess.sshmax.xyz
-  - &id024
-    name: 🇱🇾_LY_利比亚->🇹🇷_TR_土耳其_2
-    type: vmess
-    server: 197.215.140.235
-    port: 80
-    cipher: auto
-    uuid: c220f88c-8883-44aa-b66f-f4776a4053d7
+    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@forwardv2ray
+      path: /?ed=2048
       headers:
-        host: xyz33.servecounterstrike.com
+        host: freezhang.sanfen002.top
+  - &id012
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: cf-cdn.981545.xyz
+    port: 2082
+    cipher: auto
+    uuid: 1f7c4a0b-3fd0-4b19-bbc6-d09fc89a4c10
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /index?ed=2048
+      headers:
+        host: cfydmm.981545.xyz
+  - &id013
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.2.113
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.apple.com
+  - &id014
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 162.159.200.3
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.visaapp.top
+  - &id015
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: www.coldstone.club
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.coldstone.club
+  - &id016
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 104.18.15.149
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.visaapp.top
+  - &id017
+    name: 🇺🇸_US_美国->🇵🇳_PN_皮特凯恩_1
+    type: vmess
+    server: 173.249.197.176
+    port: 443
+    cipher: auto
+    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 52.49.249.102
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 104.18.154.42
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us3.visaapp.top
+  - &id020
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 15.237.201.223
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id021
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 108.181.2.154
+    port: 33445
+    cipher: auto
+    uuid: 7de8d7aa-ae4a-4d75-82f4-2e8b46fc0290
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 104.21.83.10
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.coldstone.club
+  - &id023
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
+    type: vmess
+    server: www.darkroom.lol
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.darkroom.lol
+  - &id024
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 11.namesilo123.top
+    port: 8880
+    cipher: auto
+    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: freezhang.sanfen002.top
   - &id025
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10845
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 27.namesilo123.top
+    port: 2082
+    cipher: auto
+    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: freezhang.sanfen002.top
   - &id026
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10847
-    udp: true
-    password: 17e82f43-a0c6-4518-9d1f-3ac454429c3d
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    name: 🇷🇼_RW_卢旺达
+    type: vmess
+    server: 197.243.57.239
+    port: 22222
+    cipher: auto
+    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 27.namesilo123.top
+    port: 8880
+    cipher: auto
+    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: freezhang.sanfen002.top
+  - &id028
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 94.131.10.135
+    port: 8080
+    cipher: auto
+    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id029
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 104.18.15.147
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us3.889611.com
+  - &id030
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 162.159.200.7
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.visaapp.top
+  - &id031
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: dx-us.85413.xyz
+    port: 11114
+    cipher: auto
+    uuid: 1f7c4a0b-3fd0-4b19-bbc6-d09fc89a4c10
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: 172.67.212.114
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id033
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_3
+    type: vmess
+    server: 104.18.15.148
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id034
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_4
+    type: vmess
+    server: 104.18.15.150
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id035
+    name: 🇺🇸_US_美国->🇵🇳_PN_皮特凯恩_2
+    type: vmess
+    server: pitcairn.ednovas.org
+    port: 443
+    cipher: auto
+    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id036
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_5
+    type: vmess
+    server: 162.159.200.6
+    port: 80
+    cipher: auto
+    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -392,6 +565,16 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -423,6 +606,16 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -452,6 +645,16 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
